Modularize each project to support the Java Module System